feat: 이미지 파일 처리

--- a/compose.yaml
+++ b/compose.yaml
@@ -32,6 +32,7 @@ services:
       - redis
       - mysql
     volumes:
+      - ./images:/images
       - ./uploads:/uploads
 volumes:
   mysql_data:
