--- a/compose.yaml
+++ b/compose.yaml
@@ -13,6 +13,7 @@ services:
       - mysql_data:/var/lib/mysql   # 호스트의 볼륨을 컨테이너의 MySQL 데이터 디렉토리에 마운트
   redis:
     image: 'redis:latest'
+    container_name: redis-elviolin
     ports:
       - '6379:6379'
   spring-app_prod:
