--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,12 @@ dependencies {
 
 	//솔라피 알림톡
 	implementation 'net.nurigo:sdk:4.3.0'
+
+	//구글
+	implementation 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'
+	implementation 'com.google.auth:google-auth-library-oauth2-http:0.20.0'
+	implementation 'com.google.apis:google-api-services-calendar:v3-rev411-1.25.0'
+
 }
 
 tasks.named('test') {
