--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 host:
-  ip: http://3.34.199.230
+  ip: http://3.36.94.18
   port: 8080
 spring:
   servlet:
@@ -34,9 +34,9 @@ spring:
           time_zone: Asia/Seoul
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://13.125.139.86:3306/comochez
-    username: comochez
-    password: comochez2025!
+    url: jdbc:mysql://3.36.94.18:3306/yeongjong
+    username: yeongjong
+    password: yeongjong2025!
     hikari:
       maximum-pool-size: 10
       minimum-idle: 5
