--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ dependencies {
 	implementation 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'
 	implementation 'com.google.auth:google-auth-library-oauth2-http:0.20.0'
 	implementation 'com.google.apis:google-api-services-calendar:v3-rev411-1.25.0'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+
 
 }
 
